--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -11,3 +11,14 @@ h2 {
 h3 {
     color: black;
 }
+
+.card-course-item {
+    margin-top: 24px;
+}
+
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
