--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,22 @@
-<h1>Example App: Home</h1>
+<div class="mt-4 container">
+    <div class="row">
+
+        {{#each course}}
+        <div class="col-sm-6 col-lg-4">
+            <div class="card card-course-item">
+                <a href="/course/{{this.slug}}">
+                <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+                </a>
+                <div class="card-body">
+                    <a href="/course/{{this.slug}}">
+                    <h5 class="card-title">{{this.name}}</h5>
+                    </a>
+                    <p class="card-text">{{this.description}}</p>
+                    <a href="#" class="btn btn-primary">Start</a>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+
+    </div>
+</div>
